# rachatrades

./: .gitignore  CLAUDE.md  CNAME  README.md  emacloud512-10min.txt  grand_vision_startup.txt  index.html  luxealgo.txt  pyproject.toml  requirements.txt  videolinks.txt
.github/: copilot-instructions.md
.github/workflows/: scanner.yml
data/: latest_scan.json  positions.db  track_record.json
docs/: resources.txt  vision.md
rachatrades/: __init__.py
rachatrades/agents/: __init__.py  base.py
rachatrades/agents/opening_range/: __init__.py  strategy.py
rachatrades/agents/rashemator/: __init__.py  strategy.py  v1_cloud_flip.py  v2_pullback.py
rachatrades/core/: __init__.py
rachatrades/core/data/: __init__.py
rachatrades/core/execution/: __init__.py  alpaca_broker.py  base.py
rachatrades/core/indicators/: __init__.py  ema_cloud.py  order_blocks.py  squeeze_momentum.py  wavetrend.py
rachatrades/notifications/: __init__.py  email_notifier.py
rachatrades/scanner/: universe.py
rachatrades/web/: __init__.py  generate.py
scripts/: __init__.py  analyze.py  backtest.py  compare_agents.py  scan.py  simulate.py  simulate_orb.py  test_email.py  track_record.py
src/: __init__.py  analyze.py  main.py
src/data/: __init__.py  provider.py
src/indicators/: __init__.py  ema_cloud.py  mfi.py  williams_r.py
src/notifications/: __init__.py
src/scanner/: __init__.py  universe.py
src/signals/: __init__.py  position_tracker.py
src/strategies/: __init__.py  ema_cloud_strategy.py
src/web/: __init__.py  generate.py
tests/: __init__.py
(+4 files in other folders)
