[project]
name = "rachatrades"
version = "0.2.0"
description = "Autonomous stock scanner using Rashemator EMA Cloud strategy with multi-agent architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "schedule>=1.2.0",
    "exchange-calendars>=4.2.0",
    "pytz>=2023.3",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
rachatrades-scan = "scripts.scan:main"
rachatrades-analyze = "scripts.analyze:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rachatrades"]
